--- a/module-C .ipynb
+++ b/module-C .ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -10,8 +11,8 @@
     "\n",
     "### Module submission group\n",
     "- Group member 1\n",
-    "    - Name: NA\n",
-    "    - Email: NA\n",
+    "    - Name: Kasonde Chewe\n",
+    "    - Email: kc3745@drexel.edu\n",
     "- Group member 2\n",
     "    - Name: NA\n",
     "    - Email: NA\n",
@@ -50,7 +51,7 @@
    "outputs": [],
    "source": [
     "x = \"Jim quickly realized that the beautiful gowns are expensive.\"\n",
-    "y = \"This sentence is most certainly not a pangram.\""
+    "y = \"This sentence is most certainly not a pangram.\"\n"
    ]
   },
   {
@@ -250,13 +251,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# C5:Function(5/5)\n",
     "\n",
-    "potential_pangrams = open(\"data/pangrams.txt\", \"r\").readlines()\n",
+    "potential_pangrams = open(\"data/pangrams.txt\", \"r\", encoding='UTF-8').readlines()\n",
     "potential_pangrams = [sentence.strip().lower() for sentence in potential_pangrams]\n",
     "\n",
     "def evaluate_pangrams(sentences):\n",
@@ -784,7 +785,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
