--- a/module-C .ipynb
+++ b/module-C .ipynb
@@ -14,8 +14,8 @@
     "    - Name: Kasonde Chewe\n",
     "    - Email: kc3745@drexel.edu\n",
     "- Group member 2\n",
-    "    - Name: NA\n",
-    "    - Email: NA\n",
+    "    - Name: Ghanath V\n",
+    "    - Email: gv347@drexel.edu\n",
     "- Group member 3\n",
     "    - Name: NA\n",
     "    - Email: NA\n",
