added name group

--- a/module-C .ipynb
+++ b/module-C .ipynb
@@ -17,8 +17,8 @@
     "    - Name: Ghanath V\n",
     "    - Email: gv347@drexel.edu\n",
     "- Group member 3\n",
-    "    - Name: NA\n",
-    "    - Email: NA\n",
+    "    - Name: Kholoud Hamed M Al Nazzawi\n",
+    "    - Email: ka974@drexel.edu\n",
     "- Group member 4\n",
     "    - Name: NA\n",
     "    - Email: NA\n",
