--- a/module-C .ipynb
+++ b/module-C .ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,6 +205,9 @@
     "    \n",
     "    #---your single line of code starts here---\n",
     "    \n",
+    "    #---your code starts here---\n",
+    "    has_all =  all([True if letter in text.lower() else False for letter in 'abcdefghijklmnopqrstuvwxyz'])\n",
+    "\n",
     "    #---your single line of code stops here---\n",
     "    \n",
     "    return has_all"
@@ -222,9 +225,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(True, False)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# C2:SanityCheck\n",
     "\n",
@@ -821,7 +835,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
