function c4 and c5 complete

--- a/module-C .ipynb
+++ b/module-C .ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
        "(True, False)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
        "(True, False)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,11 +266,15 @@
     "    all_letters = set(ascii_letters)\n",
     "    letters = set()\n",
     "    \n",
-    "    #---your code starts here---\n",
-    "        \n",
-    "    #---your code stops here---\n",
+    "    # iterate over the input text and add each alphabetic character to the `letters` set\n",
+    "    for char in text.lower():\n",
+    "        if char in ascii_letters:\n",
+    "            letters.add(char)\n",
     "    \n",
-    "    return list(all_letters.difference(letters))"
+    "    # compute the set difference between `all_letters` and `letters` to get the missing letters\n",
+    "    missing_letters = list(all_letters - letters)\n",
+    "    \n",
+    "    return missing_letters\n"
    ]
   },
   {
@@ -285,9 +289,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([], ['f', 'w', 'j', 'v', 'b', 'x', 'q', 'k', 'd', 'z', 'u'])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "verify_missing(x), verify_missing(y)"
    ]
@@ -301,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,9 +328,9 @@
     "def evaluate_pangrams(sentences):\n",
     "    imposters = []\n",
     "    \n",
-    "    #---your code starts here---\n",
-    "            \n",
-    "    #---your code stops here---\n",
+    "    for sentence in sentences:\n",
+    "        if not verify(sentence):\n",
+    "            imposters.append(sentence)\n",
     "    \n",
     "    return imposters"
    ]
@@ -340,9 +355,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Faulty pangram: \n",
+      "show mangled quartz flip vibe exactly.\n",
+      "Missing letters: \n",
+      "['j', 'k']\n",
+      "\n",
+      "Faulty pangram: \n",
+      "unamazingly, this six-word pangram is questionable!\n",
+      "Missing letters: \n",
+      "['f', 'c', 'j', 'v', 'k']\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# C5:SanityCheck\n",
     "\n",
