--- a/module-C .ipynb
+++ b/module-C .ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,22 @@
     "    first_indices = []; text = text.lower()\n",
     "    \n",
     "    #---your code starts here---\n",
-    "\n",
+    "    import string\n",
+    "    \n",
+    "    all_letters = list(string.ascii_lowercase)\n",
+    "    #print(all_letters)\n",
+    "    counter = 0;\n",
+    "    new_list = []\n",
+    "    #index_list = []\n",
+    "    for i,v in enumerate(text):\n",
+    "        \n",
+    "        if(counter == 26):\n",
+    "            break\n",
+    "        if ((v in all_letters) and (v not in new_list)):\n",
+    "            first_indices.append(i)\n",
+    "            counter += 1\n",
+    "            new_list.append(v)\n",
+    "            \n",
     "    #---your code stops here---\n",
     "    \n",
     "    return first_indices"
@@ -785,7 +800,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
