--- a/module-C .ipynb
+++ b/module-C .ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,9 +108,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 4, 5, 7, 8, 9, 10, 12, 13, 14, 17, 19, 21, 22, 30, 36, 40, 41, 42, 43, 44, 51, 52, 57]\n"
+     ]
+    }
+   ],
    "source": [
     "# C1:SanityCheck\n",
     "\n",
@@ -127,17 +135,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# C2:Function(3/3)\n",
-    "\n",
     "def verify(text):\n",
     "    has_all = False\n",
     "    first_indices = indices(text)\n",
     "    \n",
     "    #---your code starts here---\n",
+    "    import string\n",
+    "    \n",
+    "    \n",
+    "    has_all = True if len(first_indices) == 26 else False\n",
     "    \n",
     "    #---your code stops here---\n",
     "    \n",
@@ -156,9 +166,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(True, False)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# C2:SanityCheck\n",
     "\n",
