--- a/module-C .ipynb
+++ b/module-C .ipynb
@@ -513,7 +513,11 @@
     "metadata_file = \"data/books/metadata.json\"\n",
     "\n",
     "#---your code starts here---\n",
-    "\n",
+    "for book in books_available.split(';')\n",
+    "    book_number = book.spilt('.')\n",
+    "    book_title = book.spilt(';')\n",
+    "    book_author = book.split(';')\n",
+    "    books = {book_number: {'author': book_author.strip() ,  'title':  book_title.strip() } }\n",
     "#---your code stops here---\n",
     "\n",
     "json.dump({k: books[k] for k in sorted(books.keys())}, \n",
