C7 and C8 completed need verification

--- a/module-C .ipynb
+++ b/module-C .ipynb
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,13 +488,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'84': {'author': 'Mary Wollstonecraft (Godwin) Shelley',\n",
+       "  'title': 'Frankenstein, or the Modern Prometheus'},\n",
+       " '98': {'author': 'Charles Dickens', 'title': 'A Tale of Two Cities'},\n",
+       " '161': {'author': 'Jane Austen', 'title': 'Sense and Sensibility'},\n",
+       " '730': {'author': 'Charles Dickens',\n",
+       "  'title': \"Oliver Twist or the Parish Boy's Progress\"},\n",
+       " '768': {'author': 'Emily Brontë', 'title': 'Wuthering Heights'},\n",
+       " '1322': {'author': 'Walt Whitman', 'title': 'Leaves of Grass'},\n",
+       " '1342': {'author': 'Jane Austen', 'title': 'Pride and Prejudice'},\n",
+       " '1400': {'author': 'Charles Dickens', 'title': 'Great Expectations'},\n",
+       " '2701': {'author': 'or the Whale; Herman Melville', 'title': 'Moby Dick'},\n",
+       " '4300': {'author': 'James Joyce', 'title': 'Ulysses'}}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# C7:Inline(5/5)\n",
     "\n",
     "import json\n",
+    "import re\n",
     "\n",
     "books_available = \"\"\"\n",
     "84.txt; Frankenstein, or the Modern Prometheus; Mary Wollstonecraft (Godwin) Shelley\n",
@@ -513,16 +536,19 @@
     "metadata_file = \"data/books/metadata.json\"\n",
     "\n",
     "#---your code starts here---\n",
-    "for book in books_available.split(';')\n",
-    "    book_number = book.spilt('.')\n",
-    "    book_title = book.spilt(';')\n",
-    "    book_author = book.split(';')\n",
-    "    books = {book_number: {'author': book_author.strip() ,  'title':  book_title.strip() } }\n",
+    "pattern = r\"(\\d+)\\.txt;\\s*(.*?);\\s*(.*)\"\n",
+    "\n",
+    "for match in re.finditer(pattern, books_available):\n",
+    "    book_number = match.group(1)\n",
+    "    book_title = match.group(2)\n",
+    "    book_author = match.group(3)\n",
+    "    books[book_number] = {'author': book_author, 'title': book_title}\n",
     "#---your code stops here---\n",
     "\n",
-    "json.dump({k: books[k] for k in sorted(books.keys())}, \n",
+    "json.dump({k: books[k] for k in sorted(books.keys())},\n",
     "          open(metadata_file, \"w\"))\n",
-    "books"
+    "\n",
+    "books\n"
    ]
   },
   {
@@ -551,17 +577,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# C8:Function(4/4)\n",
     "\n",
-    "def sentokenize(text, space = True, delims = \".?!\", sentchars = \"a-zA-Z0-9-',;:\"):\n",
+    "\n",
+    "def sentokenize(text, space=True, delims=\".?!\", sentchars=\"a-zA-Z0-9-',;:\"):\n",
     "    sentences = []\n",
     "    \n",
     "    #---your code starts here---\n",
-    "            \n",
+    "    pattern = r\"(\\s*(?<=[\" + delims + \"][^\" + sentchars + \"])\\s*)\"\n",
+    "    raw_sentences = re.split(pattern, text)\n",
+    "    \n",
+    "    for raw_sentence in raw_sentences:\n",
+    "        if raw_sentence.strip():\n",
+    "            sentence = tokenize(raw_sentence, space=space)\n",
+    "            if space:\n",
+    "                sentences.append(sentence)\n",
+    "            else:\n",
+    "                sentences.extend(sentence)\n",
     "    #---your code stops here---\n",
     "    \n",
     "    return sentences"
@@ -586,9 +622,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Only', ' ', 'add', ' ', 'plain', ' ', 'text', ' ', 'in', ' ', 'the', ' ', 'designated', ' ', 'areas', ',', ' ', 'i', '.', 'e', '.', ',', ' ', 'replacing', ' ', 'the', ' ', 'relevant', ' ', \"'NA's\", '.']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['\\nCompletion of this header is mandatory, subject to a 2-point deduction to the assignment.',\n",
+       " \"Only add plain text in the designated areas, i.e., replacing the relevant 'NA's.\",\n",
+       " 'You must fill out all group member Names and Drexel email addresses in the below markdown list, \\nunder header Module submission group.',\n",
+       " 'It is required to fill out descriptive notes pertaining to \\nany tutoring support received in the completion of this submission \\nunder the Additional submission comments section at the bottom of the header.',\n",
+       " 'If no tutoring support was received, leave NA in place.',\n",
+       " 'You may as well list other optional comments pertaining to the submission at bottom.',\n",
+       " \"Any distruption of this header's formatting will make your group liable to the 2-point deduction.\"]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# C8:SanityCheck\n",
     "\n",
@@ -617,23 +677,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# C9:Function(3/3)\n",
+    "def is_pangram(sentence):\n",
+    "    alphabet = set(\"abcdefghijklmnopqrstuvwxyz\")\n",
+    "    return alphabet.issubset(set(sentence.lower()))\n",
     "\n",
     "def get_pangrams(book_num):\n",
     "    pangrams = []\n",
     "    num_sentences = 0\n",
-    "    with open(\"data/books/\" + str(book_num) + \".txt\" , \"r\") as f:\n",
+    "    with open(\"data/books/\" + str(book_num) + \".txt\", \"r\") as f:\n",
     "        for sentence in sentokenize(f.read()):\n",
     "\n",
     "            #---your code starts here---\n",
-    "                \n",
+    "            num_sentences += 1\n",
+    "            sentence_str = ' '.join(sentence).lower()\n",
+    "            if is_pangram(sentence_str):\n",
+    "                pangrams.append(sentence)\n",
     "            #---your code stops here---\n",
-    "                \n",
-    "    return pangrams, num_sentences"
+    "\n",
+    "    return pangrams, num_sentences\n"
    ]
   },
   {
@@ -655,9 +721,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8364 1 Every town-gate and village taxing-house had its band of\n",
+      "citizen-patriots, with their national muskets in a most explosive state\n",
+      "of readiness, who stopped all comers and goers, cross-questioned them,\n",
+      "inspected their papers, looked for their names in lists of their own,\n",
+      "turned them back, or sent them on, or stopped them and laid them in\n",
+      "hold, as their capricious judgment or fancy deemed best for the dawning\n",
+      "Republic One and Indivisible, of Liberty, Equality, Fraternity, or\n",
+      "Death.\n"
+     ]
+    }
+   ],
    "source": [
     "# C9:SanityCheck\n",
     "\n",
