C11 completed, but error on c10, c9

--- a/module-C .ipynb
+++ b/module-C .ipynb
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,10 +766,39 @@
     "    pangrams_by_book = defaultdict(lambda: [[], 0])\n",
     "\n",
     "    #---your code starts here---\n",
-    "            \n",
+    "    for book_num, book_info in books.items():\n",
+    "        author = book_info['author']\n",
+    "        book_pangrams, num_sentences = get_pangrams(book_num)\n",
+    "\n",
+    "        pangrams_by_author[author][0].extend(book_pangrams)\n",
+    "        pangrams_by_author[author][1] += num_sentences\n",
+    "\n",
+    "        pangrams_by_book[(author, book_num)][0].extend(book_pangrams)\n",
+    "        pangrams_by_book[(author, book_num)][1] += num_sentences\n",
     "    #---your code stops here---\n",
-    "    \n",
-    "    return pangrams_by_author, pangrams_by_book"
+    "\n",
+    "    return pangrams_by_author, pangrams_by_book\n",
+    "\n",
+    "pangrams_by_author, pangrams_by_book = collect_pangrams(books)\n",
+    "\n",
+    "def find_pangrammiest_author_and_book(books):\n",
+    "    pangrams_by_author = defaultdict(lambda: [[], 0])\n",
+    "    pangrams_by_book = defaultdict(lambda: [[], 0])\n",
+    "\n",
+    "    for book_num, book_info in books.items():\n",
+    "        author = book_info['author']\n",
+    "        book_pangrams, num_sentences = get_pangrams(book_num)\n",
+    "\n",
+    "        pangrams_by_author[author][0].extend(book_pangrams)\n",
+    "        pangrams_by_author[author][1] += num_sentences\n",
+    "\n",
+    "        pangrams_by_book[(author, book_num)][0].extend(book_pangrams)\n",
+    "        pangrams_by_book[(author, book_num)][1] += num_sentences\n",
+    "\n",
+    "    pangrammiest_author = find_pangrammiest(pangrams_by_author)\n",
+    "    pangrammiest_book = find_pangrammiest(pangrams_by_book)\n",
+    "\n",
+    "    return pangrammiest_author, pangrammiest_book"
    ]
   },
   {
@@ -784,9 +813,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 26842)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# C10:SanityCheck\n",
     "\n",
@@ -803,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -811,12 +851,18 @@
     "\n",
     "def compute_pangram_rates(pangrams_by_author, pangrams_by_book):\n",
     "    authors_pangrams_per_sentence, books_pangrams_per_sentence = [], []\n",
-    "    \n",
-    "    #---your code starts here---\n",
-    "    \n",
-    "    #---your code stops here---\n",
-    "    \n",
-    "    return authors_pangrams_per_sentence, books_pangrams_per_sentence"
+    "\n",
+    "    for author, value in pangrams_by_author.items():\n",
+    "        pangrams, num_sentences = value\n",
+    "        pangram_rate = len(pangrams) / num_sentences\n",
+    "        authors_pangrams_per_sentence.append((author, pangram_rate))\n",
+    "\n",
+    "    for book, value in pangrams_by_book.items():\n",
+    "        pangrams, num_sentences = value\n",
+    "        pangram_rate = len(pangrams) / num_sentences\n",
+    "        books_pangrams_per_sentence.append((book, pangram_rate))\n",
+    "\n",
+    "    return authors_pangrams_per_sentence, books_pangrams_per_sentence\n"
    ]
   },
   {
@@ -851,9 +897,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In order of decreasing pangrammyness, the authors are: \n",
+      "[('or the Whale; Herman Melville', 0.0003982873643333665),\n",
+      " ('Walt Whitman', 0.00234375),\n",
+      " ('Mary Wollstonecraft (Godwin) Shelley', 0.0),\n",
+      " ('Jane Austen', 0.00023784983746927773),\n",
+      " ('James Joyce', 0.0004067189978443893),\n",
+      " ('Emily Brontë', 0.00034928396786587494),\n",
+      " ('Charles Dickens', 7.4510096118024e-05)]\n",
+      "\n",
+      "In order of decreasing pangrammyness, the books are: \n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "0.0003982873643333665",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[34], line 12\u001b[0m\n\u001b[0;32m      9\u001b[0m pprint(\u001b[39msorted\u001b[39m(authors_pangrams_per_sentence,reverse \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m))\n\u001b[0;32m     11\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39mIn order of decreasing pangrammyness, the books are: \u001b[39m\u001b[39m\"\u001b[39m )\n\u001b[1;32m---> 12\u001b[0m pprint([(x[\u001b[39m0\u001b[39;49m], books[x[\u001b[39m1\u001b[39;49m]][\u001b[39m'\u001b[39;49m\u001b[39mtitle\u001b[39;49m\u001b[39m'\u001b[39;49m]) \u001b[39mfor\u001b[39;49;00m x \u001b[39min\u001b[39;49;00m \u001b[39msorted\u001b[39;49m(books_pangrams_per_sentence,reverse \u001b[39m=\u001b[39;49m \u001b[39mTrue\u001b[39;49;00m)])\n",
+      "Cell \u001b[1;32mIn[34], line 12\u001b[0m, in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m      9\u001b[0m pprint(\u001b[39msorted\u001b[39m(authors_pangrams_per_sentence,reverse \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m))\n\u001b[0;32m     11\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39mIn order of decreasing pangrammyness, the books are: \u001b[39m\u001b[39m\"\u001b[39m )\n\u001b[1;32m---> 12\u001b[0m pprint([(x[\u001b[39m0\u001b[39m], books[x[\u001b[39m1\u001b[39;49m]][\u001b[39m'\u001b[39m\u001b[39mtitle\u001b[39m\u001b[39m'\u001b[39m]) \u001b[39mfor\u001b[39;00m x \u001b[39min\u001b[39;00m \u001b[39msorted\u001b[39m(books_pangrams_per_sentence,reverse \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m)])\n",
+      "\u001b[1;31mKeyError\u001b[0m: 0.0003982873643333665"
+     ]
+    }
+   ],
    "source": [
     "# C10:SanityCheck\n",
     "\n",
@@ -878,25 +953,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "# C11:Function(7/7)\n",
     "\n",
     "def most_efficient_pangram(pangrams_by_book):\n",
-    "    most_efficient_author =  None\n",
+    "    most_efficient_author = None\n",
     "    most_efficient_book = None\n",
     "    most_efficient_title = None\n",
     "    least_characters = float(\"Inf\")\n",
     "    best_pangram = \"NA\"\n",
     "\n",
     "    #---your code starts here---\n",
-    "    \n",
+    "    for (author, book_num), pangram_info in pangrams_by_book.items():\n",
+    "        pangrams, _ = pangram_info\n",
+    "        for pangram in pangrams:\n",
+    "            num_characters = len(pangram)\n",
+    "            if num_characters < least_characters:\n",
+    "                least_characters = num_characters\n",
+    "                best_pangram = pangram\n",
+    "                most_efficient_author = author\n",
+    "                most_efficient_book = book_num\n",
+    "                most_efficient_title = books[book_num]['title']\n",
     "    #---your code stops here---\n",
-    "                \n",
-    "    return (most_efficient_book, most_efficient_author, \n",
-    "            most_efficient_title, least_characters, best_pangram)"
+    "\n",
+    "    return (most_efficient_book, most_efficient_author,\n",
+    "            most_efficient_title, least_characters, best_pangram)\n"
    ]
   },
   {
@@ -919,9 +1003,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The best pangramming author, Charles Dickens, wrote a 97-character pangram in the book: \n",
+      "\"Oliver Twist or the Parish Boy's Progress\" (booknumber: 730)\n",
+      "\n",
+      "This pangram was: \n",
+      "At least half a\n",
+      "dozen more were severally drawn forth from the same box, and surveyed\n",
+      "with equal pleasure; besides rings, brooches, bracelets, and other\n",
+      "articles of jewellery, of such magnificent materials, and costly\n",
+      "workmanship, that Oliver had no idea, even of their names.\n"
+     ]
+    }
+   ],
    "source": [
     "# C11:SanityCheck\n",
     "\n",
@@ -934,6 +1034,13 @@
     "      \"\\\" (booknumber: \" + str(most_efficient_book) +\")\\n\\n\" +\n",
     "      \"This pangram was: \\n\" + \"\".join(best_pangram))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
