--- a/module-C .ipynb
+++ b/module-C .ipynb
@@ -561,6 +561,15 @@
     "    sentences = []\n",
     "    \n",
     "    #---your code starts here---\n",
+    "    for i in re.split(\"(\\s*(?<=[\"+delims+\"][^\"+sentchars+\"])\\s*)\", text):\n",
+    "        sentences_list = tokenize(i)\n",
+    "        if not i:\n",
+    "            continue\n",
+    "        elif re.search(\"[\"+sentchars+\"]\", i):\n",
+    "            sentences.append(sentences_list)\n",
+    "        else:\n",
+    "            sentences[-1].extend(sentences_list)  \n",
+    "\n",
     "            \n",
     "    #---your code stops here---\n",
     "    \n",
@@ -630,6 +639,13 @@
     "        for sentence in sentokenize(f.read()):\n",
     "\n",
     "            #---your code starts here---\n",
+    "                         \n",
+    "            new_sentence = \"\".join([text for text in sentence])\n",
+    "            \n",
+    "            if verify(new_sentence) == True:\n",
+    "                  pangrams.append(new_sentence)\n",
+    "              \n",
+    "            num_sentences =num_sentences+1 \n",
     "                \n",
     "            #---your code stops here---\n",
     "                \n",
